# src/main/java/dev/razafindratelo/misinformation/repository/model/JImage.java
@@ -1,0 +1,45 @@
+package dev.razafindratelo.misinformation.repository.model;
+
+import dev.razafindratelo.misinformation.model.classifier.ImageFormat;
+import jakarta.persistence.Column;
+import jakarta.persistence.Entity;
+import jakarta.persistence.EnumType;
+import jakarta.persistence.Enumerated;
+import jakarta.persistence.Table;
+import lombok.AllArgsConstructor;
+import lombok.EqualsAndHashCode;
+import lombok.Getter;
+import lombok.NoArgsConstructor;
+import lombok.Setter;
+import lombok.ToString;
+import lombok.experimental.SuperBuilder;
+import org.hibernate.annotations.JdbcTypeCode;
+import org.hibernate.type.SqlTypes;
+
+@Entity
+@Table(name = "image")
+@AllArgsConstructor
+@NoArgsConstructor
+@Getter
+@Setter
+@SuperBuilder(toBuilder = true)
+@EqualsAndHashCode(callSuper = true)
+@ToString(callSuper = true)
+public class JImage extends JMedia {
+
+  private int width;
+  private int height;
+
+  @Enumerated(EnumType.STRING)
+  @JdbcTypeCode(SqlTypes.NAMED_ENUM)
+  private ImageFormat format;
+
+  @Column(name = "bit_depth")
+  private int bitDepth;
+
+  @Column(name = "color_model")
+  private String colorModel;
+
+  private double dpi;
+  private int iso;
+}
